--- a/7-ejercicio-grid.html
+++ b/7-ejercicio-grid.html
@@ -17,11 +17,11 @@
     <div class="contanier">
         <!--Encabezado-->
         <div class="row">
-            <div class="col-4 col-sm-6 col-md-4 bg-primary text-light">
+            <div class="col-12 col-sm-6 col-md-4 bg-primary text-light">
                 <h2>Logo de la Empresa</h2>
             </div>
-            <div class="col-8 col-sm-6 col-md-8 bg-warning">
-                <p>Menu de navegacion</p>
+            <div class="col-12 col-sm-6 col-md-8 bg-warning">
+                <h2>Menu de navegacion</h2>
             </div>
         </div>
         <!--Slider-->
