--- a/5-margenes-padding.html
+++ b/5-margenes-padding.html
@@ -1,39 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Margenes y padding</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-    <style>
-        .row div {
-            border-color: black;
-        }
-    </style>
   </head>
   <body>
-      <div class="container">
-        <h1>Malla de Bootstrap</h1>
-        <div class="row ">
-          <div class="col-4">
-              Columna
-          </div>
-          <div class="col-4">
-            Columna
-          </div>
-          <div class="col-4">
-            Columna
-          </div>
-        </div>
+    <div class="container bg-secondary mt-3 p-md-5">
         <div class="row">
-            <div class="col-6">
-                Columna
+            <div class="col-6 bg-success text-white-50 py-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur rerum laborum magni non distinctio error. Veritatis repudiandae harum in eaque nobis laboriosam quidem quae, ipsa nesciunt. Minus, voluptatem. Maiores, minus.
             </div>
-            <div class="col-6">
-                    Columna
+            <div class="col-6 bg-primary text-light">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur rerum laborum magni non distinctio error. Veritatis repudiandae harum in eaque nobis laboriosam quidem quae, ipsa nesciunt. Minus, voluptatem. Maiores, minus.
             </div>
         </div>
     </div>
