--- a/9-formularios-grid.html
+++ b/9-formularios-grid.html
@@ -1,42 +1,38 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title></title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-    <style>
-        .row div {
-            border-color: black;
-        }
-    </style>
   </head>
   <body>
-      <div class="container">
-        <h1>Malla de Bootstrap</h1>
-        <div class="row ">
-          <div class="col-4">
-              Columna
-          </div>
-          <div class="col-4">
-            Columna
-          </div>
-          <div class="col-4">
-            Columna
-          </div>
-        </div>
-        <div class="row">
-            <div class="col-6">
-                Columna
-            </div>
-            <div class="col-6">
-                    Columna
-            </div>
-        </div>
-    </div>
+        <div class="container">
+                <h1>Ejemplo de formulario con grid</h1>
+                <form>
+                    <div class="form-row">
+                        <div class="col-md-6">
+                            <label>Nombre</label>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="col-md-6">
+                            <label>Contraseña</label>
+                            <input type="password" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-check form-group">
+                        <input type="checkbox" class="form-check-input">
+                        <label class="form-check-label">Recordarme</label>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+                        <a href="#" class="btn">Recuperar Contraseña</a>
+                    </div>
+                </form>
+            </div> 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
