--- a/index.html
+++ b/index.html
@@ -88,12 +88,27 @@
               </tr>
               <tr>
                 <td>NavBar</td>
-                    <td><a href="14-navbar.html">14-navbar.html</a>
+                    <td><a href="14-navbar.html">4-navbar.html</a>
                 </td>
               </tr>
               <tr>
-                <td>NavBar</td>
+                <td>Carousel</td>
                     <td><a href="15-carousel.html">15-carousel.html</a>
+                </td>
+              </tr>
+              <tr>
+                <td>Cards</td>
+                    <td><a href="16-cards.html">16-cards.html</a>
+                </td>
+              </tr>
+              <tr>
+                <td>Galeria</td>
+                    <td><a href="17-galeria/index.html">17-galeria.html</a>
+                </td>
+              </tr>
+              <tr>
+                <td>Acordeon</td>
+                    <td><a href="18-acordeon.html">18-acordeon.html</a>
                 </td>
               </tr>
           </table>
