--- a/16-cards.html
+++ b/16-cards.html
@@ -18,7 +18,7 @@
                 <div class="card-header">
                     Encabezado
                 </div>
-                <img clas="card-img-top" src="https://placeimg.com/640/480/games" alt="">
+                <img clas="card-img-top" src="https://placeimg.com/640/480/work" alt="">
                 <div class="card-body">
                     <h2 class="card-title">Tarjeta #1</h2>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor reiciendis porro perspiciatis non cupiditate repellat. Architecto odio explicabo sunt laboriosam!</p>
@@ -31,7 +31,7 @@
                 <div class="card-header">
                     Encabezado
                 </div>
-                <img clas="card-img-top" src="https://placeimg.com/640/480/games" alt="">
+                <img clas="card-img-top" src="https://placeimg.com/640/480/flowers" alt="">
                 <div class="card-body">
                     <h2 class="card-title">Tarjeta #2</h2>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor reiciendis porro perspiciatis non cupiditate repellat. Architecto odio explicabo sunt laboriosam!</p>
@@ -44,7 +44,7 @@
                 <div class="card-header">
                     Encabezado
                 </div>
-                <img clas="card-img-top" src="https://placeimg.com/640/480/games" alt="">
+                <img clas="card-img-top" src="https://placeimg.com/640/480/flowers" alt="">
                 <div class="card-body">
                     <h2 class="card-title">Tarjeta #3</h2>
                     <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt exercitationem nesciunt praesentium velit, asperiores dolore at eaque neque eligendi tempore ipsum quaerat omnis, iusto rerum, consectetur dolor? Quas quae aut, facilis, similique libero inventore exercitationem repellat, obcaecati aliquid quia illum soluta sapiente ea sint nulla aperiam unde accusantium dolore magni?</p>
@@ -57,7 +57,7 @@
                 <div class="card-header">
                     Encabezado
                 </div>
-                <img clas="card-img-top" src="https://placeimg.com/640/480/games" alt="">
+                <img clas="card-img-top" src="https://placeimg.com/640/480/car" alt="">
                 <div class="card-body">
                     <h2 class="card-title">Tarjeta #1</h2>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor reiciendis porro perspiciatis non cupiditate repellat. Architecto odio explicabo sunt laboriosam!</p>
