--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
       <div class="container">
           <h1>Ejemplos de bootstrap</h1>
-          <table class="table">
+          <table class="table table-bordered table-dark">
               <tr>
                   <th>
                       Nombre del Ejemplo
