--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
                       Nombre del Ejemplo
                   </th>
                   <th>
+                      Fecha
+                  </th>
+                  <th>
                       Archivo 
                   </th>
               </tr>
               <tr>
                 <td>Hola Mundo</td>
+                    <td>16/agosto/2018</td>
                     <td><a href="1-hola-bootstrap.html">1-hola-bootstrap.html</a>
                 </td>
               </tr>
@@ -88,7 +92,7 @@
               </tr>
               <tr>
                 <td>NavBar</td>
-                    <td><a href="14-navbar.html">4-navbar.html</a>
+                    <td><a href="14-navbar.html">14-navbar.html</a>
                 </td>
               </tr>
               <tr>
