--- a/index.html
+++ b/index.html
@@ -32,86 +32,103 @@
               </tr>
               <tr>
                 <td>Malla</td>
+                    <td>17/agosto/2018</td>
                     <td><a href="2-malla-bootstrap.html">2-malla-bootstrap.html</a>
                 </td>
               </tr>
               <tr>
-                <td>Hola Mundo</td>
+                <td>Malla responsiva</td>
+                    <td>17/agosto/2018</td>
                     <td><a href="3-malla Responsiva-bootstrap.html">3-malla Responsiva-bootstrap.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Malla Alineamiento</td>
+                    <td>20/agosto/2018</td>
                     <td><a href="4-Malla-alineamiento.html">4-Malla-alineamiento.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Margenes y Padding</td>
+                    <td>20/agosto/2018</td>
                     <td><a href="5-margenes-padding.html">5-margenes-padding.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Sitio en construccion</td>
+                    <td>21/agosto/2018</td>
                     <td><a href="6-ejercicio-Sitio en construccion.html">6-ejercicio-Sitio en construccion.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Ejercicio Grid</td>
+                    <td>22/agosto/2018</td>
                     <td><a href="7-ejercicio-grid.html">7-ejercicio-grid.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Formulario</td>
+                    <td>23/agosto/2018</td>
                     <td><a href="8-Formulario.html">8-Formulario.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Formulario con grid</td>
+                    <td>24/agosto/2018</td>
                     <td><a href="9-formularios-grid.html">9-formularios-grid.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Ejercicio Formulario</td>
+                    <td>27/agosto/2018</td>
                     <td><a href="10-ejercicio-formulario.html">10-ejercicio-formulario.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Formulario Horizontal</td>
+                    <td>27/agosto/2018</td>
                     <td><a href="11-formulario-horizontal.html">11-formulario-horizontal.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Alertas</td>
+                    <td>28/agosto/2018</td>
                     <td><a href="12-alertas.html">12-alertas.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Modal</td>
+                    <td>28/agosto/2018</td>
                     <td><a href="13-modal.html">13-modal.html</a>
                 </td>
               </tr>
               <tr>
                 <td>NavBar</td>
+                    <td>30/agosto/2018</td>
                     <td><a href="14-navbar.html">14-navbar.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Carousel</td>
+                    <td>31/agosto/2018</td>
                     <td><a href="15-carousel.html">15-carousel.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Cards</td>
+                    <td>3/septiembre/2018</td>
                     <td><a href="16-cards.html">16-cards.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Galeria</td>
+                    <td>4/septiembre/2018</td>
                     <td><a href="17-galeria/index.html">17-galeria.html</a>
                 </td>
               </tr>
               <tr>
                 <td>Acordeon</td>
+                    <td>4/septiembre/2018</td>
                     <td><a href="18-acordeon.html">18-acordeon.html</a>
                 </td>
               </tr>
